buildscript {
	ext {
		springBootVersion = '1.3.5.RELEASE'
		cfPushVersion = '1.0.0-cached'
	}
	repositories {
		mavenCentral()
		maven { url "https://repo.spring.io/snapshot" }
		maven { url "https://repo.spring.io/milestone" }

		flatDir {
			dirs 'externalLibs'
		}
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")

		classpath("io.pivotal.services:cf-push-gradle-plugin:${cfPushVersion}")

		//Transitive dependencies of cf push plugin..will be correctly resolved if using a proper repo..
		classpath('com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.4.3')
		classpath("org.cloudfoundry:cloudfoundry-client-spring:2.0.0.BUILD-SNAPSHOT") {
			exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
			exclude group: "com.fasterxml.jackson.datatype", module: "jackson-datatype-jdk8"
		}
		classpath("org.cloudfoundry:cloudfoundry-operations:2.0.0.BUILD-SNAPSHOT"){
			exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
			exclude group: "com.fasterxml.jackson.datatype", module: "jackson-datatype-jdk8"
		}
		classpath("io.projectreactor:reactor-core:2.5.0.BUILD-SNAPSHOT")
		classpath("io.projectreactor:reactor-netty:2.5.0.BUILD-SNAPSHOT")
	}
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'spring-boot'
apply plugin: 'cf-push'
apply from: file('gradle/coverage.gradle')

jar {
	baseName = 'sample-spring-cloud-svc-ci'
	version = '1.0.0-SNAPSHOT'
}
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
	mavenCentral()
	maven { url "https://repo.spring.io/milestone" }
}


dependencies {
//	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker')
	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
	compile('org.springframework.boot:spring-boot-starter-web')
	compile('org.springframework.boot:spring-boot-starter-hateoas')
	compile('org.springframework.cloud:spring-cloud-starter')
	compile('org.springframework.boot:spring-boot-starter-actuator')
	compile('io.projectreactor:reactor-core:2.5.0.M4')
	compile('org.webjars:bootstrap:3.3.4')
	compile('org.webjars:angularjs:1.3.15')
	compile('org.webjars:angular-ui-router:0.2.13')
	compile('org.webjars:jquery:2.1.3')
	compile('junit:junit')
	testCompile('org.assertj:assertj-core')
	testCompile('org.springframework.boot:spring-boot-starter-test')
}

dependencyManagement {
	imports {
		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:1.1.0.RC1"
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.SR1"
	}
}


cfConfig {
	name = "sample-spring-cloud-svc-ci"
	hostName = "sample-spring-cloud-svc-ci"
	filePath = "build/libs/sample-spring-cloud-svc-ci-1.0.0-SNAPSHOT.jar"

	ccHost = "api.local.pcfdev.io"
	ccUser = "admin"
	ccPassword = "admin"
	org = "pcfdev-org"
	space = "pcfdev-space"
	domain = "local.pcfdev.io"

	buildpack = "https://github.com/cloudfoundry/java-buildpack.git"
	environment = ["JAVA_OPTS": "-Djava.security.egd=file:/dev/./urandom", "SPRING_PROFILES_ACTIVE": "cloud"]
	services  = []
}
